--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="test.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/1585b5405a.js"></script>
+    <!--<link href="https://fonts.googleapis.com/css?family=Lato|Roboto&display=swap" rel="stylesheet">-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,200,300,400,700,900&effect=neon">
     <title>React App</title>
   </head>
   <body>
